--- a/references.bib
+++ b/references.bib
@@ -62,3 +62,14 @@
   pages = {375--415},
   doi = {10.1111/jems.12576}
 }
+
+@online{roberthalf2024remote,
+  author = {Robert Half},
+  title = {Remote Work Statistics and Trends},
+  year = {2024},
+  month = jun,
+  day = 12,
+  url = {https://www.roberthalf.com/us/en/insights/research/remote-work-statistics-and-trends},
+  organization = {Robert Half},
+  note = {Accessed: 2025-06-27}
+}
