--- a/market_trends.qmd
+++ b/market_trends.qmd
@@ -986,23 +986,22 @@ In terms of the Remote Job Distribution by general industry, the top 3 industrie
 Take a dive into the Top industries over time with specific industries, in general, this plot displays monthly trends in job postings for from May 2024 to September 2024. As we can see in here, the remote job ratio was represented by the y-axis, which is the proportion of job postings marked as remote out of total postings in each industry per month. Higher remote ratio, represents their have more remote job opportunities open in each industry.
 
 Indeed, we can see the general trend in this plot as the remote job among different industries, which reaches the peak in Auguest 2024 and 
+then drop siginificantly in September, which suggests that the many companies end their summer recruitings. As we can see the real estate and rental industry goes from high and crash in September. In contrast, the Finance and Insurance industry has higher stability， which has consistent job postings from May to September. 
 
 
 
 ![Remote jobs Administrative and Support and Waste Management and Remediation Services](./figures/Remote_jobs_Administrative and Support and Waste Management and Remediation Services.jpg){width=90% fig-align="center"}
-
+From the above plot result, we can see that the remote job ratio trend started low in May, then continue drop low in June, then reached the peak in August (31%), after that drop low in September. In compare with the trend alighed with gray area: job postings are also have more postings in Auguest and less in September.
 
 
 
 
 ![Remote jobs Finance and Insurance](./figures/Remote_jobs_Finance and Insurance.jpg){width=90% fig-align="center"}
-
-
-
+From the above plot result, we can see that the remote job ratio trend started low in May, gradually increase in June, then reached the peak in July (33%), after that gradually drop low August. The job posting area remained high and stable through july, which is friendly for people who are seek for remote jobs.
 
 
 ![Remote jobs Real Estate and Rental and Leasing](./figures/Remote_jobs_Real Estate and Rental and Leasing.jpg){width=90% fig-align="center"}
-
+From the above plot result, we can see that the remote job ratio trend started high (43%) in May, drop in June, then rebound in July then reached the peak in August (53%), after that has a significantly drop in September(near 0). The job posting area remained comparable stable, which has high volumn in May and June, then has a siginificant drop in July and modest increase in Auguest and September. The differences between Job posting 
 
 
 
@@ -1011,5 +1010,8 @@ Indeed, we can see the general trend in this plot as the remote job among differ
 ```{=html}
 <iframe width="1000" height="700" src="./figures/state_remote_job_ratio.html" title="Remote state job ratio with average"></iframe>
 ```
+From above choreleograph, we can see that the green color depth represents the remote jobs proportions to their job postings, and with the average salary and average job experiences.
+To be more clearly, we can see that the Maine, Vermont, Alaska and Colorado have higher remote ratio, which represents their high demands on remote jobs 
+souther state on the othe hand has lighter remote ratio, which represents that there are fewer remote job demands in these regions' industries. 
 
 
