--- a/report.qmd
+++ b/report.qmd
@@ -3,6 +3,12 @@ title: report
 format: docx
 bibliography: references.bib
 csl: csl/econometrica.csl
+execute: 
+  echo: false
+  warning: false
+  error: false
+  message: false
+  eval: false
 ---
 
 {{< include "index.qmd" >}}
